--- a/src/main/webapp/css/sidenav.css
+++ b/src/main/webapp/css/sidenav.css
@@ -6,11 +6,6 @@ html, body {
 	padding: 0;
 }
 
-.sidemain-container {
-	margin-top: 6%;
-	height: 100%;
-}
-
 .sidenav {
 	top: 14%;
 	height: 100%;
